Fix alignment of text on stats

--- a/src/pages/Home/homePageComponents/DiversityInTechStatistics/diversityInTechStatistics.scss
+++ b/src/pages/Home/homePageComponents/DiversityInTechStatistics/diversityInTechStatistics.scss
@@ -59,7 +59,8 @@
 			.stat-card {	
 				padding-top: 1rem;	
 				width: 100%;
-				display: flex;
+				display: grid;
+				grid-template-columns: 1fr 2fr;
 				align-items: center;
 				gap: 1rem;
 				background-color: #1C1A22;
@@ -76,7 +77,7 @@
 					font-family: "Poppins", sans-serif;
 					font-weight: bold;
 					font-size: 2rem;
-					padding: 0.5rem 1.5rem;
+					padding: 0.5rem 2rem;
 
 					@media screen and (max-width: 768px) {
 						font-weight: bold;
